# lead-website-enricher

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: no-windmill-mirrors.yml
examples/: sample-fixture-results.json  sample-leads.json
scripts/: check-no-windmill-mirrors.sh
src/lead_website_enricher/: __init__.py  adapters.py  api.py  cli.py  engine.py  io.py  lead_quality.py  models.py  queries.py  runtime.py  scoring.py  text.py  validation.py
src/lead_website_enricher/providers/: __init__.py  base.py  fixture.py  openserp.py
tests/: test_engine.py
windmill/scripts/: lead_website_enricher_batch.py
