[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-website-enricher"
version = "0.1.0"
description = "Standalone website discovery engine for scraper leads with missing websites."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
lead-website-enricher = "lead_website_enricher.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
